syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

message Todo {

    int64 id = 1;

    string title = 2;

    string description = 3;

    google.protobuf.Timestamp reminder = 4;

    google.protobuf.Timestamp created_at = 5;

    bool is_completed = 6;

}


message TodoRequest {

    int64 id = 1;

    string title = 2;

    string description = 3;

    google.protobuf.Timestamp reminder = 4;
}

message TodoResponse {
    string api = 1;

    int64 id = 2;
}

message ListTodoRequest {
    int64 id = 1;

    string title = 2;

    google.protobuf.Timestamp startTime = 3;

    google.protobuf.Timestamp endTime = 4;
}

message ListTodoResponse {
    repeated Todo todoList = 1;
}

message UpdatedTodoRequest {

    string api = 1;

    Todo todo = 2;

}

message UpdatedTodoResponse {

    string api = 1;

    bool success = 2;

    int64 id = 3;

}

message DeleteTodoRequest {
    string api = 1;

    int64 id = 2;
}

message DeleteTodoResponse {
    string api = 1;

    bool success = 2;

    int64 id = 3;
}


service TodoService {
    rpc NewTodo (TodoRequest) returns (TodoResponse) {
    };
    rpc ListTodo (ListTodoRequest) returns (ListTodoResponse) {
    };
    rpc UpdateTodo (UpdatedTodoRequest) returns (UpdatedTodoResponse) {
    };
    rpc DeletedTodo (DeleteTodoRequest) returns (DeleteTodoResponse) {
    };
}
